@@ -31,6 +31,7 @@ import java.lang.reflect.Type;
 import java.util.Map.Entry;
 
 import com.google.common.base.Converter;
+import com.google.common.base.Supplier;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
 import com.google.gson.JsonArray;
@@ -162,7 +163,7 @@ public class ASObjectAdapter
               builder = _class.getConstructor(String.class).newInstance(tv.id());
             } catch (Throwable t) {
               try {
-                builder = _class.newInstance();
+                builder = _class.getDeclaredConstructor().newInstance();
                 builder.set("objectType", tv);
               } catch (Throwable t2) {
                 builder = Makers.object(tv);
@@ -195,7 +196,7 @@ public class ASObjectAdapter
            if (_class != null) {
              if (!_class.isInterface()) {
                try {
-                 builder = _class.newInstance();
+                 builder = _class.getDeclaredConstructor().newInstance();
                } catch (Throwable t) {
                  builder = object();
                }
@@ -235,12 +236,12 @@ public class ASObjectAdapter
               builder()));
       } else if (val.isJsonObject())
         builder.set(
-          name, 
-          context.deserialize(
-            val, 
-            propMap.has(name) ? 
-              propMap.get(name):
-              ASObject.class));
+          name,
+                (Supplier<?>) context.deserialize(
+                  val,
+                  propMap.has(name) ?
+                    propMap.get(name):
+                    ASObject.class));
     }
     return builder.get();
     
